--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^6.18.0",
     "bcrypt": "^6.0.0",
-    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-async-handler": "^1.2.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.1",
-    "prisma": "^7.2.0"
+    "mongoose": "^9.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "dotenv": "^17.2.3",
+    "nodemon": "^3.1.11",
+    "prisma": "^6.18.0"
   }
 }
