--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express-async-handler": "^1.2.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.1.1"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "dotenv": "^17.2.3",
