test(auth): add integration tests for auth controller. test(utils): add unit tests for hashPassword function.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-node_modules
 # Keep environment variables out of version control
+node_modules
 .env
+.env.test
 
-/generated/prisma
+generated
 
 migrations
-
-/generated/prisma
-
-/generated/prisma
-
-/generated/prisma
