--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec ts-node ./src/index.ts",
     "start": "ts-node ./src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "test:db": "npx dotenv -e .env.test -- prisma migrate deploy"
   },
   "author": "",
   "license": "ISC",
@@ -25,10 +26,13 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.7",
+    "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.3",
+    "dotenv-cli": "^11.0.0",
     "jest": "^30.2.0",
     "nodemon": "^3.1.11",
     "prisma": "^6.18.0",
+    "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
