--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec ts-node ./src/index.ts",
     "start": "ts-node ./src/index.ts",
@@ -17,8 +18,7 @@
     "express": "^5.2.1",
     "express-async-handler": "^1.2.0",
     "joi": "^18.0.2",
-    "jsonwebtoken": "^9.0.3",
-    "uuid": "^13.0.0"
+    "jsonwebtoken": "^9.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
