--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec ts-node ./src/index.ts",
+    "dev": "nodemon --watch src --ext ts --exec ts-node ./src/socket/socketServer.ts",
     "start": "ts-node ./src/index.ts",
     "test": "jest",
     "test:db": "npx dotenv -e .env.test -- prisma migrate deploy"
@@ -16,8 +16,11 @@
     "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "express-async-handler": "^1.2.0",
+    "helmet": "^8.1.0",
     "joi": "^18.0.2",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -25,6 +28,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.7",
+    "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
