--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon --watch src --ext ts --exec ts-node ./src/socket/socketServer.ts",
     "start": "ts-node ./src/index.ts",
     "test": "jest",
+    "worker:expiry": "ts-node -r dotenv/config src/worker/seatHoldExpiryWorker.ts",
     "test:db": "npx dotenv -e .env.test -- prisma migrate deploy"
   },
   "author": "",
@@ -14,9 +15,11 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.70.1",
     "express": "^5.2.1",
     "express-async-handler": "^1.2.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.9.3",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "socket.io": "^4.8.3",
